--- a/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
@@ -5,15 +5,15 @@ tags: careers, inside GitLab
 description: GitLab team members of different ages and backgrounds share their
   entry into this industry.
 image_title: /images/blogimages/Learn-at-GL.jpg
-twitter_text: 'We chat with a few @gitlab team members with different backgrounds
+twitter_text: "We chat with a few @gitlab team members with different backgrounds
   and at various stages in their careers to learn about their journey to tech."
 ---
 The path to a career in technology isn’t always straight, particularly today. World and economic uncertainty, a lingering pandemic, a shift to remote work, a need to do something that *matters* – all of these factors have caused sweeping changes in the broader workforce, in individual careers, and in the labor-shortage-plagued technology industry.
 
 To try to make sense of it all, we asked three GitLab team members how they made their way into technology, and why they stay. Each has a different story to tell.
 
-[Mark Loveless](https://gitlab.com/mloveless), Staff Security Engineer
-[Follow Mark on Twitter](https://twitter.com/simplenomad)
+**[Mark Loveless](https://gitlab.com/mloveless), Staff Security Engineer**
+Follow Mark on [Twitter](https://twitter.com/simplenomad)
 
 I’ve been working since the age of 16 at various jobs, eventually gaining my first real tech job in 1990 as customer support at a call center. I had always had an interest in security and moved into more of a true security role in the mid-1990s, followed by my first security research job in 1999. For many in the security field, security research was fairly brand-new territory, so those of us who had been working for quite a while found ourselves reporting to individuals our own age or younger. Later on in my career this more or less became the norm, as my peers were almost always younger than me.
 
@@ -26,7 +26,7 @@ To stay active and “keep up on the latest” whether it be the newest apps or 
 
 It is nice that when some new bit of tech comes out, I now have family and friends asking me what it's all about, and they certainly start asking if it is considered “safe” technology because they know my background. I’m fortunate that here at GitLab what knowledge I have is appreciated, no one assumes I can or cannot do something because of my age or because of preconceived ideas about what I might know at this point in my career.
 
-[Juliet Wanjohi](https://gitlab.com/jwanjohi), Senior Security Engineer
+**[Juliet Wanjohi](https://gitlab.com/jwanjohi), Senior Security Engineer**
 Follow Juliet on [Twitter](https://twitter.com/jay_wanjohi)
 
 I started in tech by undertaking a bachelor’s degree in Computer Science. I had an interest in software engineering before I decided to specialize in another area of interest: security. My goal was to blend my knowledge and skills in the two fields, and create a niche for myself as a security software engineer. I got the wonderful opportunity to be a part of the GitLab [Engineering Internship program](/handbook/engineering/internships/) and progressed on to become a full-time security engineer on the [Security Automation](/handbook/engineering/security/security-engineering-and-research/automation/) team in 2020. 
@@ -37,28 +37,26 @@ In previous junior roles I had experienced negative effects of stereotypical thi
 
 It’s important to research and evaluate the culture of a company before joining it. Take a look at the initiatives the company carries out to increase awareness against these biases and the efforts to support those who are new to the field (whether they be due to age or career path). I feel lucky to be a part of GitLab, as there are [dedicated resources for team member career, growth, and development](/handbook/people-group/learning-and-development/career-development/#resources-for-team-members), including a newly created [Early Career Professionals Team Member Discussion Group](/company/culture/inclusion/tmdg-gitlab-early-career/). The group helps those that are early career professionals in the team by supporting their growth and increasing awareness in the organization around the challenges they face on a day-to-day basis.
 
-_﻿___________________
-
-[Pj Metz](https://gitlab.com/PjMetz), Education Evangelist
-Follow on [Twitter](https://twitter.com/metzinaround)
+**[Pj Metz](https://gitlab.com/PjMetz), Education Evangelist**
+Follow Pj on [Twitter](https://twitter.com/metzinaround)
 
 I made a transition into tech at 35 years old. I didn’t feel 35 when I started though because I had only just started learning about tech through coding a year before I started at GitLab. Instead, I felt 19 – brand-new and lost in a world in which I had no experience. 
 
 As a teacher, I was confident in my abilities in the classroom. I was, not to brag, a great English teacher. I was engaging, excited about the material, and worked hard to make it relatable and enjoyable for as many students as possible. Leaving after 11 years was not an easy choice, especially because my degrees felt suddenly useless. What other work could I possibly do with a Master’s degree in Secondary English Education?
 
-I joined GitLab as an Education Evangelist in our [Education Program](/handbook/marketing/community-relations/education-program/) and was able to draw on my former knowledge base, but not completely. I had transitioned into a career where I was no longer confident and no longer able to draw on my knowledge base to quickly figure out solutions. 
+I joined GitLab as an Education Evangelist in our [Education Program](/handbook/marketing/community-relations/education-program/) and was able to draw on my former knowledge base, but not completely.
 
-Although I don’t have to code for my role, I have to know coding, which I had only started to learn in 2020 in between grading papers and working with a marching band at my high school. I also have to know how to talk to students and educators in a variety of concentrations.  Computer Science, Information Systems, Business Analysis, and other degrees are all looking to use [GitLab for Education](/solutions/education/), and I have to find ways to make it relevant for them.
+Although I don’t have to code for my role, I have to know coding, which I had only started to learn in 2020 in between grading papers and working with a marching band at my high school. I also have to know how to talk to students and educators in a variety of concentrations. Computer Science, Information Systems, Business Analysis, and other degree programs are all looking to use [GitLab for Education](/solutions/education/), and I have to find ways to make it relevant for them.
 
-This challenge has led to some of the hardest moments of my professional life. I can navigate an unmotivated teenager in class, a parent email about their child’s low grades that blames me, an administrator suddenly showing up for an observation, a drumline member who hasn’t figured out the rhythm for the halftime show opener, or an AP student stuck on analysis of the assigned article. However, this was different. The career I was entering into was full of jargon and standards I was completely unfamiliar with.
+This challenge has led to some of the hardest moments of my professional life. I can navigate an unmotivated teenager in class, a parent email about their child’s low grades that blames me, an administrator suddenly showing up for an observation, a drumline member who hasn’t figured out the rhythm for the halftime show opener, or an AP student stuck on analysis of the assigned article. However, this is different. The career I entered into is full of jargon and standards that were unfamiliar to me.
 
 I had a lot to learn. What are stock options? What is Slack? How do I structure my time if there isn’t a bell ringing to let me know the beginning and end of class? What is an expense report? People expect someone my age to know these things already.
 
-I have a sticker on my laptop case that looks like the kind you’d get at a small meetup, the kind that says “HELLO, I’m… ” and then there is a space to write your name. This sticker says: “Hello, I’m Still Learning.” I have this not so people can lower their expectations of me; instead, its purpose is to highlight that we should all still be learning and I’m going to be open about what I don’t know. I’m doing my best to turn my perceived shortcomings into strengths by bringing a mindset of [iteration](/handbook/values/#iteration) to my work, something GitLab helped me realize was important. 
+I have a sticker on my laptop case that looks like the kind you’d get at a small meetup, the kind that says “HELLO, I’m...” and then there is a space to write your name. This sticker says: “Hello, I’m Still Learning.” I have this not so people can lower their expectations of me; instead, its purpose is to highlight that we should all still be learning and I’m going to be open about what I don’t know. I’m doing my best to turn my perceived shortcomings into strengths by bringing a mindset of [iteration](/handbook/values/#iteration) to my work, something GitLab helped me realize was important. 
 
 I’m still learning, and feel so far behind some of my colleagues, but GitLab and my team have worked hard to create a space for me to feel comfortable while I work through this career change. It helps that my manager is also a former educator, so she understands the change from education to the corporate world.
 
-She reminds me to take time for myself after each conference or lecture. My onboarding buddy still meets with me regularly to help me work through something technical or to give advice about a project I’m working on. Every opportunity to connect with people as a person, whether through a [coffee chat or the “Donut-be-strangers” slack bot](/company/culture/all-remote/informal-communication/#coffee-chats), which matches me with another random team member, helps me remain grounded in the humanity of my work. Every team meeting I’m in has a reminder of the importance of taking time for ourselves, and a section in the agenda to cheer each other’s accomplishments. I couldn’t ask for a better place to have my first non-teaching job. 
+She reminds me to take time for myself after each conference or lecture. My onboarding buddy still meets with me regularly to help me work through something technical or to give advice about a project I’m working on. Every opportunity to connect with people as a person, whether through a [coffee chat or the “Donut-be-strangers” Slack bot](/company/culture/all-remote/informal-communication/#coffee-chats), which matches me with another, random team member, helps me remain grounded in the humanity of my work. Every team meeting I’m in has a reminder of the importance of taking time for ourselves, and a section in the agenda to cheer each other’s accomplishments. I couldn’t ask for a better place to have my first non-teaching job. 
 
 ## What’s your story? 
 
