--- a/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
@@ -8,11 +8,12 @@ image_title: /images/blogimages/Learn-at-GL.jpg
 twitter_text: "We chat with a few @gitlab team members with different backgrounds
   and at various stages in their careers to learn about their journey to tech."
 ---
-The path to a career in technology isn’t always straight, particularly today. World and economic uncertainty, a lingering pandemic, a shift to remote work, a need to do something that *matters* – all of these factors have caused sweeping changes in the broader workforce, in individual careers, and in the labor-shortage-plagued technology industry.
+The path to a career in technology isn’t always straight, particularly today. World and economic uncertainty, a lingering pandemic, a shift to remote work, and a need to do something that *matters* – all of these factors have caused sweeping changes in the broader workforce, in individual careers, and in the labor-shortage-plagued technology industry.
 
 To try to make sense of it all, we asked three GitLab team members how they made their way into technology, and why they stay. Each has a different story to tell.
 
-**[Mark Loveless](https://gitlab.com/mloveless), Staff Security Engineer**
+### [Mark Loveless](https://gitlab.com/mloveless), Staff Security Engineer
+
 Follow Mark on [Twitter](https://twitter.com/simplenomad)
 
 I’ve been working since the age of 16 at various jobs, eventually gaining my first real tech job in 1990 as customer support at a call center. I had always had an interest in security and moved into more of a true security role in the mid-1990s, followed by my first security research job in 1999. For many in the security field, security research was fairly brand-new territory, so those of us who had been working for quite a while found ourselves reporting to individuals our own age or younger. Later on in my career this more or less became the norm, as my peers were almost always younger than me.
@@ -26,7 +27,8 @@ To stay active and “keep up on the latest” whether it be the newest apps or 
 
 It is nice that when some new bit of tech comes out, I now have family and friends asking me what it's all about, and they certainly start asking if it is considered “safe” technology because they know my background. I’m fortunate that here at GitLab what knowledge I have is appreciated, no one assumes I can or cannot do something because of my age or because of preconceived ideas about what I might know at this point in my career.
 
-**[Juliet Wanjohi](https://gitlab.com/jwanjohi), Senior Security Engineer**
+### [Juliet Wanjohi](https://gitlab.com/jwanjohi), Senior Security Engineer
+
 Follow Juliet on [Twitter](https://twitter.com/jay_wanjohi)
 
 I started in tech by undertaking a bachelor’s degree in Computer Science. I had an interest in software engineering before I decided to specialize in another area of interest: security. My goal was to blend my knowledge and skills in the two fields, and create a niche for myself as a security software engineer. I got the wonderful opportunity to be a part of the GitLab [Engineering Internship program](/handbook/engineering/internships/) and progressed on to become a full-time security engineer on the [Security Automation](/handbook/engineering/security/security-engineering-and-research/automation/) team in 2020. 
@@ -37,7 +39,8 @@ In previous junior roles I had experienced negative effects of stereotypical thi
 
 It’s important to research and evaluate the culture of a company before joining it. Take a look at the initiatives the company carries out to increase awareness against these biases and the efforts to support those who are new to the field (whether they be due to age or career path). I feel lucky to be a part of GitLab, as there are [dedicated resources for team member career, growth, and development](/handbook/people-group/learning-and-development/career-development/#resources-for-team-members), including a newly created [Early Career Professionals Team Member Discussion Group](/company/culture/inclusion/tmdg-gitlab-early-career/). The group helps those that are early career professionals in the team by supporting their growth and increasing awareness in the organization around the challenges they face on a day-to-day basis.
 
-**[Pj Metz](https://gitlab.com/PjMetz), Education Evangelist**
+### [Pj Metz](https://gitlab.com/PjMetz), Education Evangelist
+
 Follow Pj on [Twitter](https://twitter.com/metzinaround)
 
 I made a transition into tech at 35 years old. I didn’t feel 35 when I started though because I had only just started learning about tech through coding a year before I started at GitLab. Instead, I felt 19 – brand-new and lost in a world in which I had no experience. 
@@ -58,6 +61,6 @@ I’m still learning, and feel so far behind some of my colleagues, but GitLab a
 
 She reminds me to take time for myself after each conference or lecture. My onboarding buddy still meets with me regularly to help me work through something technical or to give advice about a project I’m working on. Every opportunity to connect with people as a person, whether through a [coffee chat or the “Donut-be-strangers” Slack bot](/company/culture/all-remote/informal-communication/#coffee-chats), which matches me with another, random team member, helps me remain grounded in the humanity of my work. Every team meeting I’m in has a reminder of the importance of taking time for ourselves, and a section in the agenda to cheer each other’s accomplishments. I couldn’t ask for a better place to have my first non-teaching job. 
 
-## What’s your story? 
+### What’s your story? 
 
 How’d you get into tech? Make any pit stops along the way, or have you always been working in this industry? Let us know in the comments field. Also, if you are considering GitLab as your next step, check out our handbook to learn more about [our culture](/company/culture/), and then take a peek at our [open roles](/jobs/all-jobs/)! 
