--- a/sites/uncategorized/source/blog/blog-posts/2022-10-04-what-makes-a-great-tech-talk.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-04-what-makes-a-great-tech-talk.html.md.erb
@@ -11,19 +11,20 @@ image_title: /images/blogimages/data-startup-cognitive-logic-talks-migrating-to-
 twitter_text: "@olearycrew compiled some of his favorite tech talks to find out
   what makes them great"
 ---
+
 As someone who spends a reasonable amount of time writing, rehearsing, and giving tech talks, I often find folks new to speaking about tech asking me: how do you do it? How do you know that you will be able to write and give an excellent tech talk?
 
 The simple answer is: I don't know. An excellent tech talk isn't definable and solvable like an engineering problem. It's part tech, part passion, part storytelling, and part luck. But in thinking about speakers and talks that I've looked up to throughout the years, I believe that I've found a few key ingredients in any tech talk that I've seen and would consider "great."  In reviewing these, I actually came to appreciate what I somewhat already knew: the "tech" part of the talk is probably the least important part of a great tech talk. Yet, as professionals, that is what we get wrapped around. And it is what worries us when writing a speech. The best demo ever - that's what will save my talk! But in the end, it's not just the tech content that counts, so let's look at the five critical ingredients for a great tech talk:
 
-- Story & Narrative
+- Story and narrative
 - Passion
-- Connection to the Audience
+- Connection to the audience
 - Balance
-- Call to Action
+- Call to action
 
 For each ingredient, I've included a talk that best illustrates that principle and a link to the talk. As an aside, every moderately good talk I've ever written was inspired while listening to or after hearing a great talk from one of these amazing technologists. Remember: [good artists copy, great artists steal](https://www.youtube.com/watch?v=a6jeZ7m0ycw).
 
-## Story & Narrative
+## Story and narrative
 
 [Keynote: Reflections](https://www.youtube.com/watch?v=jiaLsxjBeOQ): **Kelsey Hightower, KubeCon CloudNativeCon North America 2019**
 
@@ -56,7 +57,7 @@ No one will ever accuse Bryan Cantrill of not being passionate. And in his talk 
 
 - [Fork Yeah! The Rise and Development of illumos](https://www.youtube.com/watch?v=-zRN7XLCRhc)
 
-## Connection to the Audience
+## Connection to the audience
 
 **[Why Open Source Firmware is Important](https://www.youtube.com/watch?v=mUTx61t443A): Jessie Frazelle, GOTO 2019**
 
@@ -75,7 +76,7 @@ A great example is Jessie Frazelle's talk at GOTO Chicago in 2019 on "Open Sourc
 
 - [Container Hacks and Fun Images](https://www.youtube.com/watch?v=cYsVvV1aVss)
 
-##Balance
+## Balance
 
 **[The Art of Code](https://www.youtube.com/watch?v=6avJHaC3C2U): Dylan Beattie, NDC London 2020**
 
@@ -105,7 +106,7 @@ Perhaps one of the best speakers when it comes to this balance is Dylan Beattie.
 
 ## Call to Action
 
-** [Why work doesn't happen at work](https://www.ted.com/talks/jason_fried_why_work_doesn_t_happen_at_work/transcript?language=en): Jason Fried, TEDx Midwest**
+**[Why work doesn't happen at work](https://www.ted.com/talks/jason_fried_why_work_doesn_t_happen_at_work/transcript?language=en): Jason Fried, TEDx Midwest**
 
 This last key - a meaningful call to action - is the one I struggled the most to name. As they say, there are only two hard things in software development: naming things, cache invalidation, and off-by-one errors. The connotation behind "call to action" may come off at first as sounding too "sales and marketing" like many software engineers. But that connotation does not impact the importance of a call to action. Using the strictest definition of the word, it is a vital part of your talk.
 
@@ -113,11 +114,11 @@ As we discussed, your audience came to your talk, hoping for you to succeed. The
 
 And they don't have to be about tech at all even. In Jason Fried's TEDx talk "Why work doesn't happen at work," Jason presents the main ideas around how we've become accustomed to working together are broken...and, more importantly, offers concrete ways to fix them. And while those calls to action are simple, they also go to the heart of Jason's story and passion: making it less crazy at work by freeing up people to do their best work with time and space.
 
-## What's Next
+## What's next?
 
 So, given that you've come this far, I hope I've shared my passion for great tech talks with you. Hopefully, that passion is shared, and you've found a new way of thinking about your own talks. So what is my gift to you for having come this far? Well, it's going to sound like an oversimplified call to action, but I'm telling you it's exactly what you should do:
 
-Go give a talk!
+**Go give a talk!**
 
 Your unique stories are valuable. You are passionate about things that others should care more about. There are audiences out there - in meetups, small events, or large conferences  - that want to hear what you have to say and will be rooting for you when you get up in front of them. All that's left is to strike a balance between those stories and substance with some of your own personal style to make it exciting and engaging.
 
