--- a/sites/handbook/source/handbook/people-group/employment-solutions/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/employment-solutions/index.html.md.erb
@@ -87,7 +87,7 @@ This table reflects the countries in which we utilize PEO's:  These countries ar
 |     Country    |  Agreement Type(s) | Hiring Partner | Entity to Invoice (for AP only) | Pay Frequency | Paid By | Currency paid in | Workday Profile (Y/N) | Scalable PEO (Y/N) | Open for hiring (Y/N) |
 |:--------------:|:------------------:|:--------------:|:-------------------------------:|:-------------:|:-------:|:----------------:|:---------------------:|:------------------:|:---------------------:|
 |    Austria *   | Employed via a PEO |   Remote.com   |           GitLab IT BV          |       12      |   PEO   |        EUR       |           Y           |          Y         |           Y           |
-|     Brazil     | Employed via a PEO |   Remote.com   |           GitLab IT BV          |       12      |   PEO   |        BRL       |           Y           |          Y         |           Y           |
+|    Brazil *    | Employed via a PEO |   Remote.com   |           GitLab IT BV          |       12      |   PEO   |        BRL       |           Y           |          Y         |           Y           |
 |     Chile *    | Employed via a PEO |  Global Upside |           GitLab IT BV          |       12      |   PEO   |        CLP       |           Y           |          Y         |           Y           |
 |  Costa Rica *  | Employed via a PEO |  Global Upside |           GitLab IT BV          |       12      |   PEO   |        USD       |           Y           |          Y         |           Y           |
 |    Denmark *   | Employed via a PEO |   Remote.com   |           GitLab IT BV          |       12      |   PEO   |        DKK       |           Y           |          Y         |           Y           |
