Add Ameya Darshan to the team

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -329,6 +329,7 @@
 [Rohit Shambhuni]: /company/team/#rshambhuni
 [Nick Malcolm]: /company/team/#nmalcolm
 [Greg Alfaro]: /company/team/#galfaro2
+[Ameya Darshan]: /company/team/#ameyadarshan
 
 [John Skarbek]: /company/team/#skarbek
 [Devin Sylva]: /company/team/#devin
