Adds Michelle Torres to Package in devops stages

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -148,6 +148,7 @@
 [Adil Farrukh]: /company/team/#adil.farrukh
 [Matthew Macfarlane]: /company/team/#mmacfarlane
 [Łukasz Korbasiewicz]: /company/team/#lkorbasiewicz
+[Michelle Torres]: /company/team/#michelletorres
 
 <%# PMM %>
 [Cindy Blake]: /company/team/#cblake2000
