Move Startups to Community Programs

--- a/sites/handbook/source/handbook/marketing/community-relations/community-programs/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/community-programs/index.html.md.erb
@@ -36,10 +36,10 @@ Through these programs, we seek to raise awareness of GitLab in specific markets
 
 | Community Program | Handbook Page | Marketing Page | Application Page | Program Owner | Email Address|
 | ----------------- | ------------- | -------------- | ---------------- | ------------- |-----------|
-| GitLab for Education | [EDU Handbook](/handbook/marketing/community-relations/community-programs/education-program/) | [Marketing page](/solutions/education/) | [Application page](/solutions/education/join/) | [Christina Hupy](https://gitlab.com/c_hupy) | education@gitlab.com |
-| GitLab for Open Source | [OSS Handbook](/handbook/marketing/community-relations/community-programs/opensource-program/) | [Marketing page](/solutions/open-source/) | [Application page](/solutions/open-source/join/) | [Bryan Behrenshausen](https://gitlab.com/bbehr) |opensource@gitlab.com|
-| GitLab for Startups | [Startups Handbook](/handbook/marketing/community-relations/startups-program/) | [Marketing page](/solutions/startups/) | [Application page](/solutions/startups/)| [Christina Hupy](https://gitlab.com/c_hupy) | startups@gitlab.com|
-| Non-profits program | [Handbook](/handbook/marketing/community-relations/community-programs/education-program/#--gitlab-for-non-profits) | N/A | N/A | [Christina Hupy](https://gitlab.com/c_hupy) | N/A |
+| GitLab for Education | [Handbook](/handbook/marketing/community-relations/community-programs/education-program/) | [Marketing page](/solutions/education/) | [Application page](/solutions/education/join/) | [Christina Hupy](https://gitlab.com/c_hupy) | education@gitlab.com |
+| GitLab for Open Source | [Handbook](/handbook/marketing/community-relations/community-programs/opensource-program/) | [Marketing page](/solutions/open-source/) | [Application page](/solutions/open-source/join/) | [Bryan Behrenshausen](https://gitlab.com/bbehr) | opensource@gitlab.com |
+| GitLab for Startups | [Handbook](/handbook/marketing/community-relations/community-programs/startups-program/) | [Marketing page](/solutions/startups/) | [Application page](/solutions/startups/)| [Christina Hupy](https://gitlab.com/c_hupy) | startups@gitlab.com |
+| GitLab for Non-Profits | [Handbook](/handbook/marketing/community-relations/community-programs/education-program/#--gitlab-for-non-profits) | N/A | N/A | [Christina Hupy](https://gitlab.com/c_hupy) | N/A |
 
 ## Community Programs workflows
 
