Add Omar Fernandez and Isabel Sandin to categories-name file

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -384,6 +384,9 @@
 [Amparo Luna]: /company/team/#a_luna
 [Mark Chao]: /company/team/#lulalala
 [Paulo Barros]: /company/team/#paulobarros
+[Omar Fernandez]: /company/team/#ofernandez2
+[Isabel Sandin]: /company/team/#isandin
+
 
 [Development Department]: /handbook/engineering/development/
 [Quality Department]: /handbook/engineering/quality/
