Add Leading Orgs to Contributor Success handbook

--- a/sites/handbook/source/handbook/engineering/quality/contributor-success/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/contributor-success/index.html.md.erb
@@ -266,3 +266,16 @@ community contributors & contributions.
 ## Code Contributor User Journey
 
 The code contributor user journey is documented in the handbook - [User Journey](./user-journey.html)
+
+## Leading Organizations
+
+The GitLab [Leading Organizations program](/handbook/marketing/community-relations/leading-organizations/) is a
+cross-functional initiative that is led by the [Contributor Success
+team](/handbook/engineering/quality/contributor-success/) and [Community Relations
+team](/handbook/marketing/community-relations/). 
+
+The Leading Organization program supports GitLab's [mission](/company/mission/#mission) by recognizing and incentivizing
+organizations who are among our most active contributors. A company or individual
+[qualifies](/handbook/marketing/community-relations/leading-organizations/#qualification) for unique benefits by
+reaching 20 merged merge requests or more over a trailing three full calendar month basis.
+
