--- a/sites/uncategorized/source/blog/blog-posts/2022-10-05-the-top-software-developer-challenges-in-2022.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-05-the-top-software-developer-challenges-in-2022.html.md.erb
@@ -13,15 +13,17 @@ twitter_text: AI, security breaches, hiring, Covid...what's your top software
 ---
 In our 2022 Global DevSecOps Survey we asked developers about the most difficult parts of their jobs, a question that’s been answered in previous years with comments about tricky toolchain integrations, complex programming languages and business-side folks who just “don’t get it.”
 
-But apparently this year *we* didn’t get it: [over 5,000 respondents](/developer-survey/) told us they were worried about the inability to hire and retain talent, the economy, the post-Covid world they’re expected to work in, adoption of complex technologies including artificial intelligence, 5G and edge computing, and the fear of/responsibility for security breaches and what that would mean to their organizations.
+But apparently this year *we* didn’t get it: [More than 5,000 respondents](/developer-survey/) told us they were worried about the inability to hire and retain talent, the economy and the post-Covid world they’re expected to work in. They are also concerned about adoption of complex technologies such as artificial intelligence, 5G and edge computing, andvthe fear of/responsibility for security breaches and what that would mean to their organizations.
 
-(That sound in the background is the shattering of the “devs are oblivious to business” stereotype.)
+(That sound you hear in the background is the shattering of the “devs are oblivious to business” stereotype.)
 
 Obviously a tectonic shift in the developer role is underway.
 
-“Two massive waves are crashing against each other right now,” explains [Brendan O’Leary](/company/team/#brendan), staff developer evangelist at GitLab. “One wave is developers as kingmakers. We were ‘brought into the palace’ because every company needed to have software as its core competency and the pendulum swung toward developers. But the other wave is the massive correction in the market. These two things happening at the same time are putting a huge squeeze on businesses and developers.” A [long-standing shortage of software developers](https://www.forbes.com/sites/forbestechcouncil/2021/06/08/is-there-a-developer-shortage-yes-but-the-problem-is-more-complicated-than-it-looks/?sh=215d08f33b8e) has been made worse by macroeconomic conditions, but demand for software isn’t decreasing despite the market upheaval, Brendan adds. The result is devs at the center of nearly all the hardest challenges today, from [hiring](/blog/2021/11/09/6-tips-to-make-software-developer-hiring-easier/) to [security breaches](/blog/2022/08/23/gitlabs-2022-global-devsecops-survey-security-is-the-top-concern-investment/) and new technologies. 
+“Two massive waves are crashing against each other right now,” explains [Brendan O’Leary](/company/team/#brendan), staff developer evangelist at GitLab. “One wave is developers as kingmakers. We were ‘brought into the palace’ because every company needed to have software as its core competency and the pendulum swung toward developers. But the other wave is the massive correction in the market. These two things happening at the same time are putting a huge squeeze on businesses and developers.”
 
-To put it another way: “We can’t be flippant about any part of the job anymore,” Brendan adds.
+A [longstanding shortage of software developers](https://www.forbes.com/sites/forbestechcouncil/2021/06/08/is-there-a-developer-shortage-yes-but-the-problem-is-more-complicated-than-it-looks/?sh=215d08f33b8e) has been made worse by macroeconomic conditions, but demand for software isn’t decreasing despite the market upheaval, O'Leary adds. The result is devs at the center of nearly all the most difficult challenges today, from [hiring](/blog/2021/11/09/6-tips-to-make-software-developer-hiring-easier/) to [security breaches](/blog/2022/08/23/gitlabs-2022-global-devsecops-survey-security-is-the-top-concern-investment/) and new technologies. 
+
+To put it another way: “We can’t be flippant about any part of the job anymore,” he adds.
 
 Here’s a look at what is keeping developers up at night.
 
@@ -29,19 +31,19 @@ Here’s a look at what is keeping developers up at night.
 
 More than 1,000 respondents said all of the issues around security make their jobs infinitely more difficult and complicated.
 
-- “(The hardest thing is to) keep it secure and keep it updated”
+- “(The hardest thing is to) keep it secure and keep it updated.”
 - “My challenge is keeping up with the latest tools and security for optimal performance and privacy.”			
-- “I am trying to build applications that are secure and stable”
-- “Cyber security attacks are the biggest challenge facing us today.”
-- “The hardest part of my job? Data security, data security, I repeat, data security”
+- “I am trying to build applications that are secure and stable.”
+- “Cybersecurity attacks are the biggest challenge facing us today.”
+- “The hardest part of my job? Data security, data security, I repeat, data security.”
 
 ### “The Covid effect”
 
-Hundreds of survey takers pointed to the changes brought about by Covid, including remote/hybrid work, economic forces, the “great resignation,” and a number of other things. One respondent called it “the Covid effect” and many stressed that this new way of working has made their fast-paced jobs harder.
+Hundreds of survey takers pointed to the changes brought about by Covid, including remote/hybrid work, economic forces, "The Great Resignation,” and a number of other things. One respondent called it “the Covid effect” and many stressed that this new way of working has made their fast-paced jobs harder.
 
 ### Staffing
 
-Hard to hire, hard to keep, hard to even find…that’s what survey takers said about the issue of staffing.
+Hard to hire, hard to keep, hard to even find...that’s what survey takers said about the issue of staffing.
 
 - “The biggest challenge is finding sufficient coding staff.”
 - “The biggest challenge is to find people to fill the jobs.”
@@ -53,7 +55,7 @@ With all the other pressures on developers, even exciting new technologies can s
 
 _“4G, 5G, AI, Metaverse, virtual space - developers have to support all of this.”_
 
-Many, many others simply said “technology is rapidly changing.”
+Many, many others simply said: “Technology is rapidly changing.”
 
 ## Bold new challenges
 
@@ -61,4 +63,6 @@ This is all a long way of saying there has perhaps never been more on developers
 
 _“We have a development capacity challenge, a recruiting challenge and a knowledge-sharing challenge.”_
 
-_“For me, these are the 8 biggest challenges we are facing as software developers: 1) Keeping pace with innovation. 2) Cultural change. 3) Customer experience. 4) Data privacy. 5) Cybersecurity. 6) AI and automation. 7) Data literacy. 8) Cross-platform functionality.”_
+_“For me, these are the eight biggest challenges we are facing as software developers: 1) Keeping pace with innovation. 2) Cultural change. 3) Customer experience. 4) Data privacy. 5) Cybersecurity. 6) AI and automation. 7) Data literacy. 8) Cross-platform functionality.”_
+
+What do you see as the biggest challenges facing developers? Let us know in the comments field below.
