Geo direction update - September 2022

--- a/source/direction/geo/disaster_recovery/index.html.md.erb
+++ b/source/direction/geo/disaster_recovery/index.html.md.erb
@@ -20,7 +20,7 @@ Please reach out to Sampath Ranasinghe, Product Manager for the Geo group ([Emai
 This strategy is a work in progress, and everyone can contribute. Please comment and contribute in the linked [issues](https://gitlab.com/groups/gitlab-org/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=Category%3ADisaster%20Recovery) and [epics](https://gitlab.com/groups/gitlab-org/-/epics?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=Category%3ADisaster%20Recovery) on this page. Sharing your feedback directly on GitLab.com is the best way to contribute to our strategy and vision.
 
 Useful resources 
-- [Roadmap for Disaster Recovery](https://gitlab.com/groups/gitlab-org/-/roadmap?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=geo%3A%3Aactive&label_name[]=Category%3ADisaster%20Recovery)
+- [Roadmap for Disaster Recovery](https://gitlab.com/groups/gitlab-org/-/roadmap?state=all&sort=start_date_asc&layout=MONTHS&timeframe_range_type=CURRENT_YEAR&label_name%5B%5D=group%3A%3Ageo&label_name%5B%5D=Category%3ADisaster+Recovery&progress=COUNT&show_progress=true&show_milestones=false&milestones_type=ALL)
 - [Maturity: <%= data.categories["disaster_recovery"].maturity.capitalize %>](/direction/maturity/)
 - [Documentation](https://docs.gitlab.com/ee/administration/geo/disaster_recovery/)
 - [Lovable Maturity epic](https://gitlab.com/groups/gitlab-org/-/epics/4988)
@@ -28,7 +28,7 @@ Useful resources
 
 ### Overview
 
-⚠️ Currently, there are [some limitations](https://docs.gitlab.com/ee/administration/geo/index.html#current-limitations) of what data is replicated. Please make sure to check the documentation!
+⚠️ Currently, there are [some limitations](https://docs.gitlab.com/ee/administration/geo/index.html#limitations) of what data is replicated. Please make sure to check the documentation!
 {: .alert .alert-warning}
 
 Disaster Recovery helps our customers fulfill their business continuity plans by creating processes that allow the recovery of a GitLab instance following a natural or human-created disaster in the data center the GitLab instance is operating in. 
