--- a/source/direction/geo/geo_replication/index.html.md.erb
+++ b/source/direction/geo/geo_replication/index.html.md.erb
@@ -10,23 +10,11 @@ canonical_path: "/direction/geo/geo_replication/"
 
 ## 🌏 Geo-replication
 
-**Last updated**: 2022-07-05
-
-### Introduction and how you can help
+|Section | Group | Last updated|
+|--------|-------|------|
+|[Enablement](https://about.gitlab.com/direction/enablement/) | [Geo](https://about.gitlab.com/direction/geo/)|  2022-10-05   |
 
 Thanks for visiting this category strategy page for GitLab Geo Replication. This page belongs to the [Geo group](https://about.gitlab.com/handbook/product/categories/#geo-group).
-
-Please reach out to Sampath Ranasinghe, Product Manager for the Geo group ([Email](mailto:sranasinghe@gitlab.com)) if you'd like to provide feedback or ask any questions related to this product category.
-
-This strategy is a work in progress, and everyone can contribute. Please comment and contribute in the linked
-[issues](https://gitlab.com/groups/gitlab-org/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo) and [epics](https://gitlab.com/groups/gitlab-org/-/epics?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo) on this page. Sharing your feedback directly on GitLab.com is the best way to contribute to our strategy and vision.
-
-Useful resources
-- [Roadmap for Geo Replication](https://gitlab.com/groups/gitlab-org/-/roadmap?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=geo%3A%3Aactive)
-- [Maturity: <%= data.categories["geo_replication"].maturity.capitalize %>](/direction/maturity/)
-- [Documentation](https://docs.gitlab.com/ee/administration/geo/index.html)
-- [Complete Maturity epic](https://gitlab.com/groups/gitlab-org/-/epics/1508)
-- [All Epics](https://gitlab.com/groups/gitlab-org/-/epics?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo)
 
 ### Overview
 
@@ -34,7 +22,7 @@ Geo replication improves the GitLab experience for geographically distributed te
 
 Pulling a large Git repository, or interacting with the UI, can take a long time for locations geographically remote from the main GitLab instance.
 
-Geo-replication provides an easily configurable, replica Geo site, which can be deployed in additional regions and accelerates the GitLab experience for nearby users.
+Geo-replication provides an easily configurable, replica Geo site, which can be deployed in additional regions and accelerates the GitLab experience for nearby users. This is achieved by replicating the entire GitLab data set to the replica site in a coordinated, verifiable and coherent manner. Data can be accessed from any of the locations whilst intelligent proxying techniques guarantee users have access to the most recent data. Users are directed to the closest site using [location aware URL](https://docs.gitlab.com/ee/administration/geo/secondary_proxy/location_aware_external_url.html).
 
 Geo-replication requires a significant investment to be configured by systems administrators and is cumbersome in more complex setups.
 
@@ -42,26 +30,38 @@ Geo [replicates 90% of all planned primary data types](https://docs.gitlab.com/e
 
 ![Geo proxying flow diagram](images/geo_proxying.png)
 
+#### How you can help
+
+Please reach out to Sampath Ranasinghe, Product Manager for the Geo group ([Email](mailto:sranasinghe@gitlab.com)) if you'd like to provide feedback or ask any questions related to this product category.
+
+This strategy is a work in progress, and everyone can contribute. Please comment and contribute in the linked
+[issues](https://gitlab.com/groups/gitlab-org/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo) and [epics](https://gitlab.com/groups/gitlab-org/-/epics?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo) on this page. Sharing your feedback directly on GitLab.com is the best way to contribute to our strategy and vision.
+
+#### Useful resources
+
+- [Roadmap for Geo Replication](https://gitlab.com/groups/gitlab-org/-/roadmap?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo&label_name[]=geo%3A%3Aactive)
+- [Maturity: <%= data.categories["geo_replication"].maturity.capitalize %>](/direction/maturity/)
+- [Documentation](https://docs.gitlab.com/ee/administration/geo/index.html)
+- [Complete Maturity epic](https://gitlab.com/groups/gitlab-org/-/epics/1508)
+- [All Epics](https://gitlab.com/groups/gitlab-org/-/epics?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Ageo)
+
 ### Vision
 
-With more and more companies shifting towards working remotely, GitLab becomes a central place for collaboration and the DevOps Platform for many customers. GitLab should offer the same great experience to users, regardless of their location. 
+With more and more companies shifting towards working remotely, GitLab becomes a central place for collaboration and the DevOps Platform for many customers. GitLab should offer the same great experience to users, regardless of their location.
 
-Geo will operate transparently in the background, accelerating read operations by serving data from the closest Geo site and proxying write requests back to the primary all via a single URL.
+Geo operates transparently in the background, accelerating read operations by serving data from the closest Geo site and proxying write requests back to the primary all via a single URL.
 
-We envision that Geo's replications solution should:
+Our vision for Geo-replication is for new Geo sites to be easily deployable to new locations as required and scaled to the requirements for these new remote teams. Geo will be easier to set up and operate, specially in multi-node architectures. It will be possible to deploy a new operational Geo site within minutes whether it is a single node or a multi-node site.
 
-- Allow [fine-grained control over what is replicated where](#ability-to-disable-geo-replication-by-data-type-in-the-ui) - not every project and repository needs to be shared.
+We will achieve 100% replication and verification of all core GitLab data types by leveraging the [self-service framework](https://docs.gitlab.com/ee/development/geo/framework.html). The self-service frame will allow other GitLab teams to easily add new data types to Geo ensuring Geo evolves with GitLab to meet the needs of our customers. 
 
-- Support replication and verification of all GitLab data types. Now that the self-service framework is well established, providing a consistent, well documented interface for adding new data types, it will be a collaborative effort with other GitLab teams generating new data types to ensure we replicate 100% of GitLab data.
+System administrators will have [end-to-end observability]((#improve-observability)) of the replication process for each site via the UI with capabilities to troubleshoot and remediate failures. Make it easy for the systems administrator to understand what Geo operations are upcoming, in progress, completed and failed. For failed operations, Geo will provide information and capabilities in the UI to allow the system administrator to correct the fault.
 
-- Geo will be easier to setup, operate and manage specially in multi-node architectures by providing a single point of entry for managing the Geo configuration of a site, eliminating the need to login to multiple nodes at a site setup DB replication, copy ssh keys and GitLab secrets.
+Geo will [accelerate more data types](#accelerate-more data-types) enabling more tasks to be accomplished with a data stored at the secondary sites thus helping to redistribute the load on the primary site. Geo will continue to intelligently proxy requests back to the primary when necessary to provide access to the most up-to-date data.
+  
+Customers will be able to choose which data types are replicated to each secondary Geo site with [fine-grained controls](#ability-to-disable-geo-replication-by-data-type-in-the-ui) thus being able to tailor each site to their needs.
 
-- Geo will have [end-to-end observability](#improve-observability) of the replication process for each site via the UI with capabilities to troubleshoot and remediate failures. Make it easy for the systems administrator to understand what Geo operations are upcoming, in progress, completed and failed. For failed operations, Geo should provide information and capabilities in the UI to allow the system administrator to correct the fault.
-
-- Geo will move to a more distributed architecture allowing more tasks to be accomplished with the data stored at the secondary sites, reducing the load on the primary site by [accelerating more data types](#accelerate-more data-types) through serving read operations from the secondary site
-instead of proxying to the primary site.
-
-- Support use of [Geo secondary sites for CI jobs](#use-of-geo-secondary-sites-for-ci-jobs) helping to reduce the load on the primary site.
+Geo will also accelerate CI runners by allowing use of [Geo secondary sites for CI jobs](#use-of-geo-secondary-sites-for-ci-jobs) helping to reduce the load on the primary site.
 
 ### Target audience and experience
 
@@ -84,6 +84,10 @@ here](https://about.gitlab.com/handbook/product/personas/).
 
 ### What's next & why
 
+#### Replicate and verify all core GitLab data types
+
+Geo will replicate and verify all core GitLab data types. We are currently at 90% for replication and 77% for verification. To achieve 100% replication we plan to add support for [alert metric images](https://gitlab.com/gitlab-org/gitlab/-/issues/362564), [issue metric images](https://gitlab.com/gitlab-org/gitlab/-/issues/362561) and [Dependency proxy](https://gitlab.com/groups/gitlab-org/-/epics/8833)
+
 #### Improve observability
 
 Geo performs complex operations by scheduling tasks in the background to replicate data to the secondary sites. Geo will [improve the observability](https://gitlab.com/groups/gitlab-org/-/epics/8240) of these operations for the systems administrators such that they are able to monitor tasks that are currently running, tasks scheduled to run in the future and tasks that have failed. For tasks that have failed, Geo will surface information in the UI that will assist in troubleshooting the root cause of the failure. Improved observability will also enhance the experience for systems administrators who are setting up their secondary site for the first time, providing immediate feedback on whether the setup was successful and replication processes are successfully underway. Failed replication can hinder the availability and reliability of a secondary site. Further, it can negatively impact chances of successful recovery in [disaster recovery](https://about.gitlab.com/direction/geo/disaster_recovery/) scenarios resulting in the loss of data.
@@ -99,7 +103,7 @@ We will initially focus on the high impact data types that will deliver the most
 
 #### Use of Geo secondary sites for CI jobs
 
-Today Geo accelerates users by serving read requests from the secondary site, in future Geo should also accelerate CI jobs by [enabling CI runners to use specific Geo secondary sites](https://gitlab.com/gitlab-org/gitlab/-/issues/3294). This will allow the CI runners to fetch data directly from the closest secondary site reducing load on the primary site. Writes will continue to be proxied back to the primary to maintain consistency. 
+Today Geo accelerates users by serving read requests from the secondary site, in future Geo should also accelerate CI jobs by [enabling CI runners to use specific Geo secondary sites](https://gitlab.com/gitlab-org/gitlab/-/issues/3294). This will allow the CI runners to fetch data directly from the closest secondary site reducing load on the primary site. Writes will continue to be proxied back to the primary to maintain consistency.
 
 #### Easier and simpler setup
 
