--- a/sites/uncategorized/source/blog/blog-posts/2022-10-05-the-top-software-developer-challenges-in-2022.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-05-the-top-software-developer-challenges-in-2022.html.md.erb
@@ -11,9 +11,9 @@ image_title: /images/blogimages/global-developer-survey.png
 twitter_text: AI, security breaches, hiring, Covid...what's your top software
   developer challenge?
 ---
-In our 2022 Global DevSecOps Survey we asked developers about the most difficult parts of their jobs, a question that’s been answered in previous years with comments about tricky toolchain integrations, complex programming languages and business-side folks who just “don’t get it.”
+In our 2022 Global DevSecOps Survey we asked developers about the most difficult parts of their jobs, a question that’s been answered in previous years with comments about tricky toolchain integrations, complex programming languages and business-side folks who "just don’t get it.”
 
-But apparently this year *we* didn’t get it: [More than 5,000 respondents](/developer-survey/) told us they were worried about the inability to hire and retain talent, the economy and the post-Covid world they’re expected to work in. They are also concerned about adoption of complex technologies such as artificial intelligence, 5G and edge computing, andvthe fear of/responsibility for security breaches and what that would mean to their organizations.
+But apparently this year *we* didn’t get it: [More than 5,000 respondents](/developer-survey/) told us they were worried about the inability to hire and retain talent, the economy and the post-Covid world they’re expected to work in. They are also concerned about adoption of complex technologies such as artificial intelligence, 5G and edge computing, and the fear of/responsibility for security breaches and what that would mean to their organizations.
 
 (That sound you hear in the background is the shattering of the “devs are oblivious to business” stereotype.)
 
